force-app/main/default/objects/DU_LegalEntityMapping__c/DU_LegalEntityMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CDM: provides market-unique mapping between various legal entity identifiers.</description>
    <label>Legal Entity Mapping</label>
</CustomObject>