force-app/main/default/objects/DU_LegalEntityMapping__c/fields/DU_ConsentMasterSystemLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_ConsentMasterSystemLegalEntity__c</fullName>
    <description>CDM: entry&apos;s legal entity in the consent master system.</description>
    <inlineHelpText>Entry&apos;s legal entity in the consent master system</inlineHelpText>
    <label>Consent Master System Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>