force-app/main/default/objects/DU_LegalEntityMapping__c/fields/DU_ConsentMasterSystemMarketingUnit__c.field-meta.xml
<CustomField>
    <fullName>DU_ConsentMasterSystemMarketingUnit__c</fullName>
    <description>CDM: entry&apos;s marketing unit in the consent master system.</description>
    <inlineHelpText>Entry&apos;s marketing unit in the consent master system</inlineHelpText>
    <label>Consent Master System Marketing Unit</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>