force-app/main/default/objects/DU_LegalEntityMapping__c/fields/DU_ConsentMasterSystemMarketingUnitNo__c.field-meta.xml
<CustomField>
    <fullName>DU_ConsentMasterSystemMarketingUnitNo__c</fullName>
    <description>CDM: entry&apos;s marketing unit number in the consent master system.</description>
    <inlineHelpText>Entry&apos;s marketing unit number in the consent master system</inlineHelpText>
    <label>Consent Master System Marketing Unit No.</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>