force-app/main/default/objects/DU_LegalEntityMapping__c/fields/DU_Lemi__c.field-meta.xml
<CustomField>
    <fullName>DU_Lemi__c</fullName>
    <description>CDM: Legal Entity Management Information name.</description>
    <inlineHelpText>Legal Entity Management Information name</inlineHelpText>
    <label>LEMI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>