force-app/main/default/objects/DU_LegalEntityMapping__c/fields/DU_LemiCode__c.field-meta.xml
<CustomField>
    <fullName>DU_LemiCode__c</fullName>
    <description>CDM: 6-character alphanumeric code for the Legal Entity Management Information entry.</description>
    <inlineHelpText>6-character alphanumeric code for the Legal Entity Management Information entry</inlineHelpText>
    <label>LEMI Code</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>