force-app/main/default/objects/DU_LegalEntityMapping__c/listViews/DU_All.listView-meta.xml
<ListView>
    <fullName>DU_All</fullName>
    <columns>NAME</columns>
    <columns>DU_LemiCode__c</columns>
    <columns>DU_Lemi__c</columns>
    <columns>DU_ConsentMasterSystemMarketingUnitNo__c</columns>
    <columns>DU_ConsentMasterSystemMarketingUnit__c</columns>
    <columns>DU_ConsentMasterSystemLegalEntity__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>